src/objects/sma__MADataLoad__c.object
<CustomObject>
    <fields>
        <fullName>sma__DataType__c</fullName>
        <label>DataType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Email1__c</fullName>
        <label>Email1</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sma__Email2__c</fullName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sma__Email3__c</fullName>
        <label>Email3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sma__Filters__c</fullName>
        <label>Filters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Settings__c</fullName>
        <label>Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Total_Errors__c</fullName>
        <label>Total Errors</label>
        <summarizedField>sma__MADataLoadSegment__c.sma__Total_Errors__c</summarizedField>
        <summaryForeignKey>sma__MADataLoadSegment__c.sma__DataLoad__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sma__Total_Records__c</fullName>
        <label>Total Records</label>
        <summarizedField>sma__MADataLoadSegment__c.sma__Total_Records__c</summarizedField>
        <summaryForeignKey>sma__MADataLoadSegment__c.sma__DataLoad__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sma__Total_Succeeded__c</fullName>
        <label>Total Succeeded</label>
        <summarizedField>sma__MADataLoadSegment__c.sma__Total_Succeeded__c</summarizedField>
        <summaryForeignKey>sma__MADataLoadSegment__c.sma__DataLoad__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>MapAnything Data Load</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>MapAnything Data Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Data Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>